Vitis2023.1/DRC_Rev2.0_SW/.metadata/.plugins/org.eclipse.cdt.ui/DRCApplication.build.log
12:10:01 **** Incremental Build of configuration Debug for project DRCApplication ****
make all 
'Building file: ../src/BB_test.c'
'Invoking: ARM v8 gcc compiler'
aarch64-none-elf-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/BB_test.o" -IC:/Xilinx/Vitis/2023.1/Projects/DRCDeliverableSoftware/DRCPlatform/export/DRCPlatform/sw/DRCPlatform/standalone_domain/bspinclude/include -MMD -MP -MF"src/BB_test.d" -MT"src/BB_test.o" -o "src/BB_test.o" "../src/BB_test.c"
../src/BB_test.c: In function 'main':
../src/BB_test.c:67:33: error: 'XPAR_AXI_GPIO_2_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   67 | #define GPIO2_DATA0A_ID         XPAR_AXI_GPIO_2_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:719:47: note: in expansion of macro 'GPIO2_DATA0A_ID'
  719 |     Status = XGpio_Initialize(&GPIO2_DATA0A,  GPIO2_DATA0A_ID);
      |                                               ^~~~~~~~~~~~~~~
../src/BB_test.c:67:33: note: each undeclared identifier is reported only once for each function it appears in
   67 | #define GPIO2_DATA0A_ID         XPAR_AXI_GPIO_2_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:719:47: note: in expansion of macro 'GPIO2_DATA0A_ID'
  719 |     Status = XGpio_Initialize(&GPIO2_DATA0A,  GPIO2_DATA0A_ID);
      |                                               ^~~~~~~~~~~~~~~
../src/BB_test.c:68:33: error: 'XPAR_AXI_GPIO_3_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   68 | #define GPIO3_DATA0B_ID         XPAR_AXI_GPIO_3_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:724:47: note: in expansion of macro 'GPIO3_DATA0B_ID'
  724 |     Status = XGpio_Initialize(&GPIO3_DATA0B,  GPIO3_DATA0B_ID);
      |                                               ^~~~~~~~~~~~~~~
../src/BB_test.c:69:33: error: 'XPAR_AXI_GPIO_4_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   69 | #define GPIO4_DATA1A_ID         XPAR_AXI_GPIO_4_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:729:47: note: in expansion of macro 'GPIO4_DATA1A_ID'
  729 |     Status = XGpio_Initialize(&GPIO4_DATA1A,  GPIO4_DATA1A_ID);
      |                                               ^~~~~~~~~~~~~~~
../src/BB_test.c:70:33: error: 'XPAR_AXI_GPIO_5_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   70 | #define GPIO5_DATA1B_ID         XPAR_AXI_GPIO_5_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:734:47: note: in expansion of macro 'GPIO5_DATA1B_ID'
  734 |     Status = XGpio_Initialize(&GPIO5_DATA1B,  GPIO5_DATA1B_ID);
      |                                               ^~~~~~~~~~~~~~~
../src/BB_test.c:71:33: error: 'XPAR_AXI_GPIO_6_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   71 | #define GPIO6_DATA2A_ID         XPAR_AXI_GPIO_6_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:739:47: note: in expansion of macro 'GPIO6_DATA2A_ID'
  739 |     Status = XGpio_Initialize(&GPIO6_DATA2A,  GPIO6_DATA2A_ID);
      |                                               ^~~~~~~~~~~~~~~
../src/BB_test.c:72:33: error: 'XPAR_AXI_GPIO_11_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   72 | #define GPIO11_DATA2B_ID        XPAR_AXI_GPIO_11_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:744:48: note: in expansion of macro 'GPIO11_DATA2B_ID'
  744 |     Status = XGpio_Initialize(&GPIO11_DATA2B,  GPIO11_DATA2B_ID);
      |                                                ^~~~~~~~~~~~~~~~
../src/BB_test.c:73:33: error: 'XPAR_AXI_GPIO_12_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   73 | #define GPIO12_DATA3A_ID        XPAR_AXI_GPIO_12_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:749:48: note: in expansion of macro 'GPIO12_DATA3A_ID'
  749 |     Status = XGpio_Initialize(&GPIO12_DATA3A,  GPIO12_DATA3A_ID);
      |                                                ^~~~~~~~~~~~~~~~
../src/BB_test.c:74:33: error: 'XPAR_AXI_GPIO_13_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
   74 | #define GPIO13_DATA3B_ID        XPAR_AXI_GPIO_13_DEVICE_ID
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
../src/BB_test.c:754:48: note: in expansion of macro 'GPIO13_DATA3B_ID'
  754 |     Status = XGpio_Initialize(&GPIO13_DATA3B,  GPIO13_DATA3B_ID);
      |                                                ^~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:29: src/BB_test.o] Error 1

12:10:04 Build Finished (took 2s.893ms)

